--- a/public/css/woocommerce_gift_cards_lite-public.css
+++ b/public/css/woocommerce_gift_cards_lite-public.css
@@ -88,3 +88,10 @@ margin-bottom: 10px  !important;
     border-radius: 5px;
     margin-right: 12px;
 }
+#mwb_wgm_price{
+  width:99%;
+}
+#mwg_wgm_preview_email {
+    font-weight: bold;
+    letter-spacing: 1px;
+}
