--- a/admin/css/woocommerce_gift_cards_lite-admin.css
+++ b/admin/css/woocommerce_gift_cards_lite-admin.css
@@ -7,6 +7,9 @@
  * {
     box-sizing: border-box;
 }
+.mwb_wgm_main_template .woocommerce-help-tip {
+  margin-right: 15px !important;
+}
 .mwb_wgm_main_template, .mwb_wgm_main_template p, .mwb_wgm_main_template li {
   font-size: 16px;
 }
@@ -64,8 +67,6 @@
     border-radius: 4px;
     color: #ffffff !important;
 }
-
-
 #mwb_wgm_setting_wrapper .mwb_wgc_pro_version_wrapper .mwb_wgc_about_pro_version {
     font-size: 15px;
     font-weight: bold;
@@ -82,31 +83,70 @@
   border: 1px solid #bababa;
   width: 100%;
 }
-#mwb_wgm_setting_wrapper .mwb_wgc_pro_version_wrapper .mwb_wgc_get_it_button {
+#mwb_wgm_setting_wrapper .mwb_wgc_pro_version_wrapper .mwb_wgc_get_it_button,.mwb_wgm_save_button,
+.mwb_wgm_small_button,#mwb_wgm_csv_offlinecoupon_import,#mwb_wgm_import_button,
+#mwb_wgm_add_new_card_button, .resend.column-resend .mwb_wgm_offline_resend_mail,
+#mwb_uwgc_qrcode_setting_save,#uwgc_custom_giftcard ,#mwb_uwgc-license-activate{
     background-color: #ef5350;
-    color: #fff;
+    color: #ffffff;
     display: inline-block;
     padding: 10px 25px;
     text-decoration: none;
     font-weight: bold;
     font-size: 14px;
+    height: auto;
+    text-shadow: none;
+    border: none;
+    box-shadow: none;
+    cursor: pointer;
+    line-height: 1.3;
+    border-radius: 0;
+}
+.mwb_wgm_small_button:hover,
+.mwb_wgm_small_button:focus{
+  color: #ffffff;
+}
+#mwb_uwgc_qrcode_setting_save {
+  min-width: 133px;
+}
+.resend.column-resend .mwb_wgm_offline_resend_mail,#uwgc_custom_giftcard {
+  padding: 5px 8px;
+  font-size: 13px;
 }
 #mwb_wgm_setting_wrapper .mwb_wgc_pro_version_wrapper .mwb_wgc_get_it_button:hover{
-  color: #fff;
+  color: #ffffff;
 }
 #mwb_wgm_setting_wrapper .mwb_wgc_pro_version_wrapper .mwb_wgc_get_it_now {
   text-align: center;
   margin-top: 20px;
 }
+#mwb_uwgc-license-key {
+  padding: 10px;
+}
 #mwb_wgm_setting_wrapper .mwb_wgm_table_wrapper .mwb_wgm_general_setting tr:nth-child(2n+1) {
   background-color: #efefef;
 }
-#mwb_wgm_setting_wrapper .mwb_wgm_table_wrapper .mwb_wgm_general_setting tr label{
-  padding-left: 15px;
+.mwb_uwgc_thankyouorder_row .form-table.wp-list-table.widefat.fixed.striped,
+.mwb_wgm_discount_row .form-table.wp-list-table.widefat.fixed.striped {
+  table-layout: auto;
+  width: 100%;
 }
-#mwb_wgm_setting_wrapper .mwb_wgm_table_wrapper .mwb_wgm_product_setting tr label{
-  padding-left: 15px;
+.mwb_wgm_discount_row .form-table.wp-list-table.widefat.fixed.striped .mwb_wgm_discount_tbody{
+  display: table-header-group;
 }
+.mwb_uwgc_thankyouorder_row .form-table.wp-list-table.widefat.fixed.striped input[type="text"],
+.mwb_wgm_discount_row .form-table.wp-list-table.widefat.fixed.striped input[type="text"] {
+  width: 110px;
+}
+#mwb_uwgc_add_more ,#mwb_wgm_add_more{
+  margin-top: 10px;
+}
+/*#mwb_wgm_setting_wrapper .mwb_wgm_table_wrapper .mwb_wgm_general_setting tr label{
+  padding-left: 15px;
+}*/
+/*#mwb_wgm_setting_wrapper .mwb_wgm_table_wrapper .mwb_wgm_product_setting tr label{
+  padding-left: 15px;
+}*/
 #mwb_wgm_setting_wrapper .mwb_wgm_table_wrapper .mwb_wgm_product_setting tr:nth-child(2n+1) {
     background-color: #efefef;
 }
@@ -159,6 +199,17 @@
     padding: 5px 13px;
     line-height: 1.3;
     vertical-align: middle;
+}
+#mwb_uwgc_pdf_deprecated {
+  background-color: #ef5350;
+  color: #ffffff;
+  border: none;
+  margin-left: 6px;
+  padding: 4px 7px;
+  display: inline-block;
+  border-radius: 4px;
+  text-align: center;
+  cursor: pointer;
 }
 #mwb_wgm_other_setting_giftcard_html {
     width: 100%;
@@ -585,6 +636,7 @@ transform: rotate(90deg);
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+    width: 98%;
 }
 .mwb_wgm_admin_notices p {
   margin: 5px 0;
@@ -919,4 +971,7 @@ transform: rotate(90deg);
     margin-right: 4px;
     font-weight: bold;
     color: #000000 !important;
+}
+#mwb_wgm_mail_setting_upload_image {
+    margin-left: 15px;
 }
