--- a/public/css/woocommerce_gift_cards_lite-public.css
+++ b/public/css/woocommerce_gift_cards_lite-public.css
@@ -2,7 +2,12 @@
  * All of the CSS for your public-facing functionality should be
  * included in this file.
  */
- 
+ .product-type-wgm_gift_card .price {
+  margin: 0 !important;
+}
+.product-type-wgm_gift_card .price ~ .cart {
+  padding-top: 0 !important;
+}
  .mwb_wgm_added_wrapper {
  	margin-bottom: 20px ;
  }
@@ -55,4 +60,43 @@
   width: 100%;
   height: 610px;
   display: block;
+}
+/*css for single product page on front end */
+.mwb_wgm_send_giftcard {
+  margin-right: 5px;
+}
+.mwb_wgm_msg_info {
+ display: block;
+ font-size: 13px;
+}
+.mwb_wgm_to_email{
+margin-bottom: 10px  !important;
+}
+#mwb_wgm_to_name_optional {
+    width: 99%;
+    display:none;
+}
+.mwb_wgm_delivery_method {
+    border: 1px solid #f1f1f1;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.12);
+    margin-bottom: 25px;
+    padding: 20px;
+}
+.mwb_wgm_featured_img {
+    margin-right: 12px;
+    margin-bottom: 10px;
+    border: solid 3px #d2d2d2;
+    background-color: #00897b;
+}
+.mwb_wgm_pre_selected_temp {
+    border: 3px solid #2c2726 !important;
+    border-radius: 5px;
+    margin-right: 12px;
+}
+#mwb_wgm_price{
+  width:99%;
+}
+#mwg_wgm_preview_email {
+    font-weight: bold;
+    letter-spacing: 1px;
 }
