--- a/admin/css/woocommerce_gift_cards_lite-admin.css
+++ b/admin/css/woocommerce_gift_cards_lite-admin.css
@@ -984,3 +984,72 @@ a.mwb_wgm_plugin_activation_msg {
 	font-size: 13px;
 	line-height: 1.5;
 }
+
+/*chat now on skype*/
+#mwb-wgm-skype-link img {
+margin-right: 5px;
+vertical-align: text-bottom;
+}
+#mwb-wgm-skype-link {
+color: #00AAF2;
+background: #fff;
+border-radius: 4px;
+display: inline-block;
+padding: 7px 8px;
+font-weight: bold;
+}
+
+/*popup for lead*/
+.mwb_wgm_pop_up_wrap {
+background-color: rgba(0, 0, 0, 0.55);
+bottom: 0;
+height: 100%;
+left: 0;
+position: fixed;
+right: 0;
+top: 0;
+width: 100%;
+z-index: 9999;
+}
+.mwb_wgm_pop_up_wrap p {
+color: #232323;
+font-size: 17px;
+text-align: center;
+}
+.mwb_wgm_pop_up_wrap .pop_up_sub_wrap {
+background-color: #fff;
+border-radius: 3px;
+box-shadow: 0 6px 5px rgba(0, 0, 0, 0.4);
+box-sizing: border-box;
+left: 0;
+margin: 0 auto;
+max-width: 595px;
+min-height: 228px;
+padding: 16px;
+position: absolute;
+right: 0;
+top: 50%;
+transform: translateY(-50%);
+}
+.mwb_wgm_pop_up_wrap .pop_up_sub_wrap .button_wrap {
+margin-top: 35px;
+text-align: center;
+}
+.mwb_wgm_pop_up_wrap .pop_up_sub_wrap .button_wrap a {
+border-radius: 3px;
+box-sizing: border-box;
+color: #fff;
+display: block;
+font-size: 17px;
+padding: 10px;
+text-decoration: none;
+width: 80%;
+margin: 0 auto 15px;
+}
+.mwb_wgm_pop_up_wrap .pop_up_sub_wrap .button_wrap a:nth-child(1) {
+background-color: #26488f;
+}
+.mwb_wgm_pop_up_wrap .pop_up_sub_wrap .button_wrap a:nth-child(2) {
+text-decoration: underline;
+color: #252525;
+}
