--- a/admin/css/woocommerce_gift_cards_lite-admin.css
+++ b/admin/css/woocommerce_gift_cards_lite-admin.css
@@ -622,29 +622,7 @@ transform: rotate(90deg);
   .mwb_redeem_details td textarea:focus, .mwb_redeem_details td input[type="text"]:focus{
 	border-color: #ffffff;
   }
-  .mwb_wgm_admin_notices {
-	display: flex;
-	background-color: #4F3154;
-	color: #ffffff;
-	border-left-color: #ef5350;
-	justify-content: space-between;
-	align-items: center;
-	flex-wrap: wrap;
-	width: 98%;
-}
-.mwb_wgm_admin_notices p {
-  margin: 5px 0;
-}
-.mwb_wgm_admin_notices a {
-  color: #ffffff;
-  font-weight: 600;
-  margin-left: 10px;
-}
-.mwb_wgm_admin_notices p ~ a {
-  font-weight: normal;
-  font-size: 13px;
-}
-
+  
 .mwb_gw_new_badge {
   background-color: #4F3154;
   border-radius: 6px;
@@ -1052,4 +1030,26 @@ background-color: #26488f;
 .mwb_wgm_pop_up_wrap .pop_up_sub_wrap .button_wrap a:nth-child(2) {
 text-decoration: underline;
 color: #252525;
+}
+/*notification bar*/
+
+.notice-container {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+.notice-image img {
+    max-width: 50px;
+}
+img {
+    border: none;
+}
+.notice-content {
+    margin-left: 15px;
+}
+div#dismiss_notice {
+    margin-left: 2px;
+    margin-right: 20px;
 }
