--- a/admin/css/woocommerce_gift_cards_lite-admin.css
+++ b/admin/css/woocommerce_gift_cards_lite-admin.css
@@ -62,7 +62,7 @@
 .mwb_wgm_header_content_right ul li.mwb_wgm_header_menu_button a {
 	display: inline-block;
 	background-color: #ef5350;
-	font-weight: 600;
+	font-weight: 800;
 	padding: 7px 20px;
 	border-radius: 4px;
 	color: #ffffff !important;
@@ -925,25 +925,7 @@ transform: rotate(90deg);
 	margin-left: 39px;
 	margin-top: 10px;
 }
-.mwb_wgm_redeem_link {
-	background-color: #ef5350;
-	color: #ffffff !important;
-	padding: 11px 16px;
-	position: relative;
-	font-size: 16px;
-	border-radius: 4px;
-	display: inline-block;
-}
-.mwb_wgm_redeem_link span {
-	background-color: #f1cb32;
-	padding: 5px 12px;
-	border-radius: 4px;
-	text-align: center;
-	display: inline-block;
-	margin-right: 4px;
-	font-weight: bold;
-	color: #000000 !important;
-}
+
 #mwb_wgm_mail_setting_upload_image {
 	margin-left: 15px;
 }
@@ -977,60 +959,6 @@ padding: 7px 8px;
 font-weight: bold;
 }
 
-/*popup for lead*/
-.mwb_wgm_pop_up_wrap {
-background-color: rgba(0, 0, 0, 0.55);
-bottom: 0;
-height: 100%;
-left: 0;
-position: fixed;
-right: 0;
-top: 0;
-width: 100%;
-z-index: 9999;
-}
-.mwb_wgm_pop_up_wrap p {
-color: #232323;
-font-size: 17px;
-text-align: center;
-}
-.mwb_wgm_pop_up_wrap .pop_up_sub_wrap {
-background-color: #fff;
-border-radius: 3px;
-box-shadow: 0 6px 5px rgba(0, 0, 0, 0.4);
-box-sizing: border-box;
-left: 0;
-margin: 0 auto;
-max-width: 595px;
-min-height: 228px;
-padding: 16px;
-position: absolute;
-right: 0;
-top: 50%;
-transform: translateY(-50%);
-}
-.mwb_wgm_pop_up_wrap .pop_up_sub_wrap .button_wrap {
-margin-top: 35px;
-text-align: center;
-}
-.mwb_wgm_pop_up_wrap .pop_up_sub_wrap .button_wrap a {
-border-radius: 3px;
-box-sizing: border-box;
-color: #fff;
-display: block;
-font-size: 17px;
-padding: 10px;
-text-decoration: none;
-width: 80%;
-margin: 0 auto 15px;
-}
-.mwb_wgm_pop_up_wrap .pop_up_sub_wrap .button_wrap a:nth-child(1) {
-background-color: #26488f;
-}
-.mwb_wgm_pop_up_wrap .pop_up_sub_wrap .button_wrap a:nth-child(2) {
-text-decoration: underline;
-color: #252525;
-}
 /*notification bar*/
 
 .notice-container {
@@ -1052,4 +980,106 @@ img {
 div#dismiss_notice {
     margin-left: 2px;
     margin-right: 20px;
+}
+
+
+/*=====================================
+=            PREMIUM SECTION            =
+=====================================*/
+.mwb_wgm__wrapper {
+	margin: 0 auto;
+	max-width: 1270px;
+	width: 100%;
+
+}
+.mwb_wgm__container {
+	width: 100%;
+	
+}
+.mwb_wgm__row {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	margin: 0 0 40px 0;
+}
+.mwb_wgm__column {
+	border-bottom: 4px solid #ef5350;
+	box-shadow: -1px -5px 4px 2px rgba(0,0,0,.05);
+	box-shadow: 0 5px 20px rgba(0,0,0,.15);
+	color: #555d66;
+	flex: 0 0 80%;
+	font-size: 16px;
+	line-height: 28px;
+	margin: 0 4% 0 0;
+	max-width: 48%;
+	padding: 10px 30px 10px 40px;
+	word-wrap: break-word;
+    border-radius: 4px;
+}
+.mwb_wgm__column:nth-child(2n) {
+	margin-right: 0;
+}
+.mwb_wgm__content {
+    width: 100%;
+}
+
+.mwb_wgm_upgrade {
+    background: #ffffff;
+    padding: 50px 0;
+}
+
+.mwb_wgm_upgrade__wrapper {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.mwb_wgm_upgrade_btn {
+    padding-left: 20px;
+}
+
+a.mwb_wgm--cta {
+    background: #ef5350;
+    border-radius: 50px;
+    color: #ffffff;
+    display: inline-block;
+    font-size: 18px;
+    font-weight: 600;
+    padding: 8px 50px;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+/*=====================================
+=            MEDIA QUERIES            =
+=====================================*/
+
+@media only screen and (max-width: 767px) {
+	.mwb_wgm__column {
+		flex-direction: column;
+		flex:0 0 100%;
+		margin: 0 0 80px 0;
+		max-width: 100%;
+	}
+	.mwb_wgm__row {
+		margin: 0;
+	}
+
+}
+
+/*=====  End of MEDIA QUERIES  ======*/
+/*=====================================
+=            END OF PREMIUM SECTION    =
+=====================================*/
+
+a.mwb-wgm-go-pro {
+    background: #05d5d8;
+    color: white;
+    font-weight: 700;
+    padding: 2px 5px;
+    border: 1px solid #05d5d8;
+    border-radius: 5px;
+}
+
+span.mwb-wgn-icon-text {
+    padding-left: 1px;
 }
