--- a/admin/css/makewebbetter-onboarding-admin.css
+++ b/admin/css/makewebbetter-onboarding-admin.css
@@ -182,7 +182,7 @@ input[type=radio]:checked::before {
   filter: drop-shadow(5px 5px 5px #222);
 }
 .select2-search-choice {
-  float: none !important
+  float: none !important;
   padding: 10px !important;
   text-align: left;
 }
@@ -249,7 +249,7 @@ input#s2id_autogen1 {
   -o-transition: transform 0.3s ease-out;
   -webkit-transition: transform 0.3s ease-out;
   color: #ffffff;
-  content: "\279E"; // arrow right unicode
+  content: "\279E" ; /* arrow right unicode*/
   display: inline-block;
   display: inline-block;
   font-size: 20px;
