--- a/admin/css/makewebbetter-onboarding-admin.css
+++ b/admin/css/makewebbetter-onboarding-admin.css
@@ -4,13 +4,13 @@
  */
  #error {display: none;}
  /* Button used to open the contact form - fixed at the bottom of the page */
- .mwb-on-boarding-form-submit {
+ .wps-on-boarding-form-submit {
   text-align: center;
 }
-.mwb-on-boarding-wrapper-control {
+.wps-on-boarding-wrapper-control {
   overflow: hidden;
 }
-.mwb-on-boarding-submit {
+.wps-on-boarding-submit {
   border: none;
   padding: 16px 20px;
   width: 100%;
@@ -22,12 +22,12 @@
   filter: drop-shadow( 5px 5px 5px #222 );
 }
 /* Add styles to the form container */
-.mwb-on-boarding-wrapper {
+.wps-on-boarding-wrapper {
   padding: 10px;
   background-color: white;
 }
 /* Set a style for the submit/login button */
-.mwb-on-boarding-wrapper .btn {
+.wps-on-boarding-wrapper .btn {
   background-color: #4CAF50;
   color: white;
   padding: 16px 20px;
@@ -37,7 +37,7 @@
   margin-bottom:10px;
   opacity: 0.8;
 }
-.mwb-form-single-field {
+.wps-form-single-field {
   background: #1fe2e2;
   margin: 10px;
   border-radius: 5px;
@@ -52,7 +52,7 @@
   font-size: 12px;
 }
 /*==========================================
-=            MWB POPUP FORM CSS            =
+=            WPS POPUP FORM CSS            =
 ==========================================*/
 * {
   box-sizing: border-box;
@@ -60,7 +60,7 @@
 .keep_hidden {
   display: none;
 }
-.mwb-onboarding-section {
+.wps-onboarding-section {
   position: fixed;
   background-color: rgba(0,0,0,0.6);
   top: 0;
@@ -71,7 +71,7 @@
   height: 100%;
   display: none;
 }
-.mwb-on-boarding-wrapper-background {
+.wps-on-boarding-wrapper-background {
     content: "";
     left: 0;
     margin: 0 auto;
@@ -87,16 +87,16 @@
     transform: translateY(5%);
     transition: 0.5s linear all;
 }
-.mwb-on-boarding-wrapper {
+.wps-on-boarding-wrapper {
   padding: 25px 15px;
 }
-.mwb-on-boarding-heading {
+.wps-on-boarding-heading {
   font-size: 30px;
   line-height: 1.5;
   margin: 0;
   text-align: center;
 }
-.mwb-on-boarding-desc {
+.wps-on-boarding-desc {
   color: #808080;
   font-size: 16px;
   margin: 0 auto;
@@ -105,7 +105,7 @@
   text-align: center;
   width: 100%;
 }
-.mwb-on-boarding-close-btn {
+.wps-on-boarding-close-btn {
   border-radius: 50%;
   border: 2px solid #0073aa;
   content: "";
@@ -117,13 +117,13 @@
   top: 31px;
   width: 30px;
 }
-.mwb-on-boarding-close-btn a {
+.wps-on-boarding-close-btn a {
   display: block;
   font-size: 20px;
   line-height: 22px;
   text-decoration: none;
 }
-.mwb-form-single-field {
+.wps-form-single-field {
   background: #ffffff;
   border-radius: 5px;
   margin: 10px;
@@ -148,7 +148,7 @@ input[type="text"] {
   padding: 5px;
   width: 100%;
 }
-.mwb-on-boarding-checkbox-wrapper {
+.wps-on-boarding-checkbox-wrapper {
   margin: 0 0 10px 0;
 }
 input[type="checkbox"] {
@@ -160,7 +160,7 @@ input[type="radio"] {
 input[type=radio]:checked::before {
   filter: drop-shadow( 5px 5px 5px #222 );
 }
-.mwb-on-boarding-radio-wrapper {
+.wps-on-boarding-radio-wrapper {
   display: inline-block;
   max-width:24%;
   width: 100%;
@@ -182,7 +182,7 @@ input[type=radio]:checked::before {
   filter: drop-shadow(5px 5px 5px #222);
 }
 .select2-search-choice {
-  float: none !important
+  float: none !important;
   padding: 10px !important;
   text-align: left;
 }
@@ -214,10 +214,10 @@ input#s2id_autogen1 {
   color: #3389bf !important;
   font-weight: 600;
 }
-.mwb-on-boarding-form-btn__wrapper {
+.wps-on-boarding-form-btn__wrapper {
   text-align: center;
 }
-.mwb-on-boarding-verify {
+.wps-on-boarding-verify {
   background: #016cb0;
   border: 2px solid transparent !important;
   color: #ffff;
@@ -226,30 +226,30 @@ input#s2id_autogen1 {
   position: relative;
   text-transform: uppercase;
 }
-.mwb-on-boarding-no_thanks, .mwb-deactivation-no_thanks {
+.wps-on-boarding-no_thanks, .wps-deactivation-no_thanks {
   background-color: #ffff;
   color: #016cb0 !important;
   font-weight: 600;
   text-transform: uppercase;
   text-decoration: none;
 }
-.mwb-on-boarding-form-submit {
+.wps-on-boarding-form-submit {
   display: inline-block;
   margin: 0 auto;
   max-width: 300px !important;
   width: 100%;
 }
-.mwb-on-boarding-form-verify {
+.wps-on-boarding-form-verify {
   margin: 0 20px 0 110px;
   position: relative;
 }
-.mwb-on-boarding-form-verify:after {
+.wps-on-boarding-form-verify:after {
   -moz-transition: transform 0.3s ease-out;
   -ms-transition: transform 0.3s ease-out;
   -o-transition: transform 0.3s ease-out;
   -webkit-transition: transform 0.3s ease-out;
   color: #ffffff;
-  content: "\279E"; // arrow right unicode
+  content: "\279E" ; /* arrow right unicode*/
   display: inline-block;
   display: inline-block;
   font-size: 20px;
@@ -258,35 +258,35 @@ input#s2id_autogen1 {
   top: 19px;
   transition: transform 0.3s ease-out;
 }
-.mwb-on-boarding-form-verify:hover::after {
+.wps-on-boarding-form-verify:hover::after {
  -moz-transform: translateX(4px);
  -ms-transform: translateX(4px);
  -o-transform: translateX(4px);
  -webkit-transform: translateX(4px);
  transform: translateX(4px);
 }
-.mwb-on-boarding-form-no_thanks {
+.wps-on-boarding-form-no_thanks {
   text-align: end;
 }
 .onboard-popup-show {
   display: block;
 }
-.mwb-form-single-field:nth-child(3) {
+.wps-form-single-field:nth-child(3) {
   box-sizing: border-box;
   display: inline-block;
   max-width: 97%;
   width: 100%;
 }
-.mwb-form-single-field:nth-child(4) {
+.wps-form-single-field:nth-child(4) {
   box-sizing: border-box;
   display: inline-block;
   max-width: 97%;
   width: 100%;
 }
-.mwb-on-boarding-form-btn__wrapper {
+.wps-on-boarding-form-btn__wrapper {
   margin: 20px 0 0 0;
 }
-.mwb-on-boarding-form-no_thanks {
+.wps-on-boarding-form-no_thanks {
   display: inline-block;
   float: right;
   margin: 20px 20px 0 0px;
@@ -306,15 +306,15 @@ input.select2-search__field {
 li.select2-search.select2-search--inline {
     width: 100% !important;
 }
-/*=====  End of MWB POPUP FORM CSS  ======*/
+/*=====  End of WPS POPUP FORM CSS  ======*/
 /*=====================================
 =            MEDIA QUERIES            =
 =====================================*/
 @media only screen and (max-width: 992px) {
- .mwb-form-single-field:first-child {
+ .wps-form-single-field:first-child {
   width: 96%;
 }
-.mwb-form-single-field:nth-child(2) {
+.wps-form-single-field:nth-child(2) {
   width: 96%;
 }
 input#s2id_autogen1 {
@@ -339,12 +339,12 @@ input[type="text"] {
   }
 } 
 @media only screen and (max-width: 796px) {
-  .mwb-form-single-field:nth-child(3) {
+  .wps-form-single-field:nth-child(3) {
     display: block;
     max-width: 97%;
     width: 100%;
   }
-  .mwb-form-single-field:nth-child(4) {
+  .wps-form-single-field:nth-child(4) {
     display:block;
     max-width: 97%;
     width: 100%;
@@ -354,17 +354,17 @@ input[type="text"] {
   }
 }
 @media only screen and (max-width: 620px) {
-  .mwb-on-boarding-form-verify  {
+  .wps-on-boarding-form-verify  {
     display: block !important;
     margin:15px auto !important;
   }
-  .mwb-on-boarding-form-no_thanks {
+  .wps-on-boarding-form-no_thanks {
     float:none !important;
     margin:0 !important;
   }
 }
 @media only screen and (max-width: 600px) {
-  .mwb-on-boarding-radio-wrapper {
+  .wps-on-boarding-radio-wrapper {
     margin-bottom: 15px;
     max-width: 100%;
     width: 100%;
@@ -372,39 +372,39 @@ input[type="text"] {
   input[type="email"] {
     width: 99% !important;
   }
-  .mwb-on-boarding-close-btn {
+  .wps-on-boarding-close-btn {
     right:35px;
     top:33px;
   }
 }
 @media only screen and (max-width: 405px) {
-  .mwb-on-boarding-form-submit {
+  .wps-on-boarding-form-submit {
     max-width: 100% !important;
     padding: 15px 10px;
     width: 100%;
     margin: 0 20px 0 0 !important;
   }
-  .mwb-on-boarding-form-verify:after {
+  .wps-on-boarding-form-verify:after {
     right: 25px;
     top: 32px;
   }
   input[type="email"] {
     width: 96% !important;
   }
-  .mwb-form-single-field:nth-child(2) {
+  .wps-form-single-field:nth-child(2) {
     width: 93%;
   }
-  .mwb-form-single-field:nth-child(3) {
+  .wps-form-single-field:nth-child(3) {
     display: block;
     max-width: 97%;
     width: 100%;
   }
-  .mwb-form-single-field:nth-child(4) {
+  .wps-form-single-field:nth-child(4) {
     display:block;
     max-width: 94%;
     width: 100%;
   }
-   .mwb-on-boarding-form-verify  {
+   .wps-on-boarding-form-verify  {
     display: block !important;
     text-align: center !important;
     margin: 0 20px 0 0px !important;
@@ -414,7 +414,7 @@ input[type="text"] {
 
 /*deactivating popup css*/
 
-.mwb-deactivating-radio-wrapper {
+.wps-deactivating-radio-wrapper {
     margin: 0 0 10px 0;
 }
 
