issue from iframe thickbox

--- a/admin/css/woocommerce_gift_cards_lite-admin.css
+++ b/admin/css/woocommerce_gift_cards_lite-admin.css
@@ -917,7 +917,7 @@ thead {
   margin: 0 auto;
 
   width: 100% !important;
-  height: 480px!important;
+  /* height: 480px!important; */
 }
 #wps_wgm_email_template + span{
   width: 50% !important;
