--- a/admin/css/wpswings-onboarding-admin.css
+++ b/admin/css/wpswings-onboarding-admin.css
@@ -134,7 +134,7 @@
   display: block;
   font-size: 15px;
   font-weight: 500;
-  margin: 0 0 15px 0;
+  margin: 15px 15px 15px 0;
 }
 .on-boarding-field-label {
   color: rgba(0,0,0,0.6);
