sent multiple giftcard at a time

--- a/public/css/woocommerce_gift_cards_lite-public.css
+++ b/public/css/woocommerce_gift_cards_lite-public.css
@@ -51,7 +51,7 @@
 }
 #wps_wgm_to_email {
 	width: 99%;
-  margin-bottom: 10px  !important;
+  /* margin-bottom: 10px  !important; */
 }
 #wps_wgm_message {
 	width: 99%;
@@ -66,9 +66,14 @@
 .wps_wgm_send_giftcard {
   margin-right: 5px;
 }
-.wps_wgm_msg_info {
+.wps_wgm_msg_info,.wps_wgm_msg_info_multiple_email {
  display: block;
  font-size: 13px;
+}
+.wps_wgm_msg_info_multiple_name{
+  display: block;
+  font-size: 13px;
+  display: none;
 }
 #wps_wgm_to_name_optional {
 	width: 99%;
@@ -117,4 +122,8 @@
 .wps_wgm_section select, .wps_wgm_section input[type=text], .wps_wgm_section textarea {
   min-height: 33px;
   color: #333333;
+}
+
+.wps_wgm_quantity_one_per_recipient{
+  display: none;
 }
