fixed color issue

--- a/admin/css/woocommerce_gift_cards_lite-admin.css
+++ b/admin/css/woocommerce_gift_cards_lite-admin.css
@@ -1186,8 +1186,8 @@
  }
  
  a.wps_wgm_plugin_activation_msg {
-	 background: #EF5350;
-	 border-color: #ef5350;
+	 background: #2196f3;
+	 border-color: #2196f3;
 	 color: #fff;
 	 display: inline-block;
 	 padding: 0px 13px;
