--- a/public/css/woocommerce_gift_cards_lite-public.css
+++ b/public/css/woocommerce_gift_cards_lite-public.css
@@ -130,3 +130,32 @@
 .wps_wgm_quantity_one_per_recipient{
   display: none;
 }
+/* / My Account start / */
+
+.woocommerce-MyAccount-content .wps-wallet-field-container {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.woocommerce-MyAccount-content .wps-wallet-field-container input[type=number],
+.woocommerce-MyAccount-content .wps-wallet-field-container input[type=text],
+.woocommerce-MyAccount-content .wps-wallet-field-container input[type=submit] {
+    min-height: 30px;
+    padding: 5px 10px;
+    line-height: 1.5;
+    max-width: 350px;
+    margin: 0;
+}
+
+.woocommerce-MyAccount-content .wps-wallet-field-container input[type=number],
+.woocommerce-MyAccount-content .wps-wallet-field-container input[type=text] {
+    border: 1px solid;
+}
+
+.woocommerce-MyAccount-content .wps-wallet-field-container input[type=submit] {
+    max-width: fit-content;
+    cursor: pointer;
+}
+
+/* / My Account end / */
