--- a/admin/css/woocommerce_gift_cards_lite-admin.css
+++ b/admin/css/woocommerce_gift_cards_lite-admin.css
@@ -1255,6 +1255,7 @@ img {
 div#dismiss_notice {
     margin-left: 2px;
     margin-right: 20px;
+    margin-bottom: 15px;
 }
 
 
@@ -1581,3 +1582,14 @@ span.wps-wgn-icon-text {
     margin: 0 3px 0 0;
     height: 18px;
 }
+.wps-offer-notice.notice.notice-warning {
+    padding: 0;
+    border: none;
+    margin-left: 2px;
+    margin-right: 20px;
+  }
+  .wps-offer-notice.notice.notice-warning a img {
+    display: block;
+    width: 100%;
+    height: auto;
+  }
