--- a/public/css/woocommerce_gift_cards_lite-public.css
+++ b/public/css/woocommerce_gift_cards_lite-public.css
@@ -214,3 +214,6 @@ input#gift_card_balance_email {
     border: solid 2px #000000;
     outline: none;
 }
+a.wps_copyLinkButton.wps-group-tool-tip {
+  vertical-align: top;
+}
